Some Layout Issue Fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,6 @@ body {
   background-image: url(https://wallpapers-clan.com/wp-content/uploads/2023/10/night-forest-with-wild-animals-desktop-wallpaper-preview.jpg);
   background-size: cover;
   background-position: center;
-  overflow: hidden;
 }
 
 .container {
@@ -46,6 +45,7 @@ body {
   padding: 20px;
   color: #fff;
   transition: height 0.6s ease;
+  margin-bottom: 40px;
 }
 .search-box {
   position: relative;
